--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start",
     "type-check": "tsc",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx --ext js"
+    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "latest",
@@ -15,17 +17,28 @@
     "react-markdown": "^7.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.2.1",
     "@types/node": "^12.12.21",
+    "@types/node-fetch": "^3.0.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "autoprefixer": "^10.3.4",
+    "babel-jest": "^27.2.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.25.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.0",
+    "msw": "^0.35.0",
+    "node-fetch": "^2.6.1",
     "postcss": "^8.3.6",
     "prettier": "^2.4.0",
+    "react-test-renderer": "^17.0.2",
     "serve": "^12.0.1",
     "tailwindcss": "^2.2.15",
     "typescript": "4.3.2"
